src/App.css
body {
  background-image: url("https://images.pexels.com/photos/907485/pexels-photo-907485.jpeg?auto=compress&cs=tinysrgb&w=600");
  background-size: cover;
}

.display {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.3);
  margin: 20% auto;
  padding: 20px;
  text-align: center;
  border-radius: 15px;
}

form {
  margin-bottom: 20px;
}

input {
  background-color: rgba(255, 255, 255, 0.7);
  width: 500px;
  height: 40px;
  border-radius: 7px;
}

button {
  height: 45px;
  width: 75px;
  border-radius: 7px;
  background-color: rgba(181, 144, 255, 0.5);
  
}

.current {
  background-color: rgba(255, 255, 255, 0.3);
  margin-bottom: 20px;
  width: fit-content;
  padding: 20px;
  border-radius: 15px;
}

.three-day-header {
  text-align: center;
  margin-bottom: 20px;
  width: 100%;
}

.three-day {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  flex-direction: column;
}

.day1, .day2, .day3 {
  background-color: rgba(255, 255, 255, 0.3);
  margin: 10px;
  flex-basis: 30%;
  text-align: center;
  border-radius: 15px;
}

.day-container {
  display: flex;
  width: 100%;
  justify-content: space-around;
}

ul {
  list-style-type: none;
}

button.three-day-header {
  max-width: 200px;
}

h1 {
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 3em;
}

.header-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.3);
  padding: 20px;
  text-align: center;
  border-radius: 15px;
  width: 40vw;
  margin: auto;
}

p {
  font-size: 2em;
}

